EuroCarsUSA/wwwroot/css/site.css
/* ... */
    .switch-handle-shape svg {
        width: 16px;
        height: 16px;
    }


.list-item {
    min-height: 56px;
    align-content: center;
}

.list-item-state-layer {
    transition: all 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.list-item-state-building-block:hover .list-item-state-layer {
    background-color: rgba(var(--bs-primary-rgb), 0.08);
}

.list-item-supportive-text.two-line {
    display: -webkit-box; /* Создаем многострочный контейнер */
    -webkit-line-clamp: 1; /* Ограничиваем до 1 строк */
    -webkit-box-orient: vertical; /* Ожидаем вертикальное направление */
    overflow: hidden;
    text-overflow: ellipsis;
    width: 100%;
}



.line-edit-input {
    outline: none;
    border: none;
    box-shadow: none;
    color: inherit;
    font: inherit;
    background-color: transparent;
    caret-color: #646468;
}

    .line-edit-input:focus {
        outline: none;
    }

.line-edit-state-layer {
    transition: all 0.3s cubic-bezier(0.2, 0, 0, 1);
}

.line-edit-text-field:hover .line-edit-state-layer {
    background-color: rgba(var(--bs-primary-rgb), 0.08);
}

.line-edit-overline-text {
    color: #646468;
    transition: color 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.active-indicator {
    border-bottom: solid;
    border-color: rgba(100, 100, 104, 1);
    border-width: 1px;
    right: 0;
    bottom: 0;
    transition: border-color 0.3s cubic-bezier(0.3, 0, 0, 1),
                border-width 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.line-edit:focus-within .line-edit-state-layer {
    background-color: transparent;
}
.line-edit:focus-within .line-edit-input {
    caret-color: var(--bs-primary);
}
.line-edit:focus-within .line-edit-overline-text {
    color: var(--bs-primary);
}

.line-edit:focus-within .active-indicator {
    border-color: var(--bs-primary) !important;
    border-width: 3px !important;
}

.line-edit:focus-within .line-edit-trailing-element .icon-container {
    color: var(--bs-primary);
    transition: color 0.3s cubic-bezier(0.3, 0, 0, 1);
}




.line-edit.error .line-edit-state-layer {
    background-color: transparent;
}

.line-edit.error .line-edit-input {
    caret-color: #bd33a4;
}

.line-edit.error .line-edit-overline-text {
    color: #bd33a4;
    transition: color 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.line-edit.error .active-indicator {
    border-color: #bd33a4 !important;
    border-width: 3px !important;
}

.line-edit.error .line-edit-trailng-supportive-text {
    color: #bd33a4 !important;
    transition: color 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.line-edit.error .line-edit-supportive-text {
    color: #bd33a4 !important;
    transition: color 0.3s cubic-bezier(0.3, 0, 0, 1);
}


.line-edit.error .line-edit-trailing-element .icon-container {
    color: #bd33a4 !important;
    transition: color 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.line-edit-only-placeholder {
    height: 40px;
}


.fab {
    padding: 0;
    border: 0;
    overflow: hidden;
}

    .fab:hover {
        box-shadow: 1px 4px 4px 0px rgba(0,0,0, 0.15), 0px 8px 12px 6px rgba(var(--bs-primary-rgb), 0.3) !important;
    }

.ripple-effect-secondary {
    position: relative;
    overflow: hidden; /* Эффект остаётся внутри элемента */
    outline: none;
}

    .ripple-effect-secondary::after {
        content: "";
        position: absolute;
        top: var(--ripple-y, 50%);
        left: var(--ripple-x, 50%);
        width: 0;
        height: 0;
        background-color: rgba(var(--bs-secondary-rgb), 0.12);
        border-radius: 50%;
        transform: translate(-50%, -50%);
        opacity: 0;
        pointer-events: none;
        transition: width 0.3s cubic-bezier(0.3, 0, 0, 1), height 0.3s cubic-bezier(0.3, 0, 0, 1), opacity 0.3s ease-in-out;
    }

    .ripple-effect-secondary.active::after {
        opacity: 1; 
        width: 125%;
        height: 125%;
    }

    .ripple-effect-secondary.fade-out::after {
        opacity: 0;
        transition: opacity 0.3s ease-in-out;
    }

.ripple-effect-primary {
    position: relative;
    overflow: hidden;
    outline: none;
}

    .ripple-effect-primary::after {
        content: "";
        position: absolute;
        top: var(--ripple-y, 50%);
        left: var(--ripple-x, 50%);
        width: 0;
        height: 0;
        background-color: rgba(var(--bs-primary-rgb), 0.12);
        border-radius: 50%;
        transform: translate(-50%, -50%);
        opacity: 0;
        pointer-events: none;
        transition: width 0.3s cubic-bezier(0.3, 0, 0, 1), height 0.3s cubic-bezier(0.3, 0, 0, 1), opacity 0.3s ease-in-out;
    }

    .ripple-effect-primary.active::after {
        opacity: 1;
        width: 125%;
        height: 125%;
    }

    .ripple-effect-primary.fade-out::after {
        opacity: 0;
        transition: opacity 0.3s ease-in-out;
    }

.cardDetails {
    transition: max-height 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.edit-car-details {
    transition: max-height 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.order-details {
    transition: max-height 0.3s cubic-bezier(0.3, 0, 0, 1);
}

.main-recommend{
    flex-wrap: nowrap !important;
    overflow: scroll;
}

@media (min-width:992px) {
    .main-recommend {
        flex-wrap: wrap !important;
        overflow: visible;
    }
}

.main-wdrodze {
    flex-wrap: nowrap !important;
    overflow: scroll;
}

@media (min-width:992px) {
    .main-wdrodze {
        flex-wrap: wrap !important;
        overflow: visible;
    }
}
#img-drag-drop {
    border: 2px dashed var(--bs-primary);
}

#img-drag-drop img {
    width: 100px;
}

.image-upload-galley {
    flex-wrap: nowrap !important;
    overflow: scroll;
    overflow-y: auto
}
.customOrderForm {
    max-height: 320px;
    overflow-y: auto;
    margin-left: -8px;
    margin-right: -8px;
}

@media (min-width:768px) {
    .customOrderForm {
        max-height: none;
    }
}

